--- a/FrontendWPF/MainWindow.xaml
+++ b/FrontendWPF/MainWindow.xaml
@@ -97,7 +97,7 @@
                 <Button x:Name="NewSaveButton" Content="📁 Nouvelle sauvegarde" Style="{StaticResource AnimatedButtonStyle}" Click="NewSaveButton_Click" />
                 <Button x:Name="LogsButton" Content="📜 Accès aux logs" Style="{StaticResource AnimatedButtonStyle}" Click="LogsButton_Click"/>
                 <Button x:Name="SettingsButton" Content="⚙️ Paramètres" Style="{StaticResource AnimatedButtonStyle}" Click="SettingsButton_Click" />
-                <Button x:Name="TrackSavesButton" Content="🔍 Suivi des sauvegardes" Style="{StaticResource AnimatedButtonStyle}" />
+                <Button x:Name="TrackSavesButton" Content="🔍 Suivi des sauvegardes" Style="{StaticResource AnimatedButtonStyle}" Click="TracksButton_Click" />
             </StackPanel>
 
 
@@ -105,37 +105,8 @@
             <Button x:Name="CloseButton" Content="❌ Quitter" Style="{StaticResource QuitButtonStyle}" Grid.Row="4" Click="CloseButton_Click"/>
         </Grid>
 
-        <!-- Main content area -->
-        <StackPanel Grid.Column="1" Margin="10">
-            <TextBlock x:Name="mySaves" Text="MES SAUVEGARDES" FontWeight="Bold" FontSize="30" Margin="0,20,0,100" HorizontalAlignment="Center"/>
-
-            <ListView Width="Auto" Margin="0,10">
-
-
-
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    </Style>
-                </ListView.ItemContainerStyle>
-
-
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock x:Name="newSave" Text="nouvelle sauvegarde" FontWeight="Bold" FontSize="15" Margin="10,0" VerticalAlignment="Center"/>
-                    <Button Content="▶ "  Width="33" Height="20" Background="white"/>
-                    <Button Content="⏸" Margin="5" Width="33" Height="20" Background="white"/>
-                    <Button Content="■ " Margin="5" Width="33" Height="20"  Background="White"/>
-                    <Button Content="📃" Margin="5" Width="33" Height="20"  Background="White"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <ProgressBar Width="400" Height="15" Margin="0,10" Value="65"/>
-                    <TextBlock Text="65%" VerticalAlignment="Center" Margin="5,0"/>
-                </StackPanel>
-                <TextBlock x:Name="estimatedTime" Text="temps estimé" FontWeight="Bold" FontSize="10" Margin="10,0"/>
-
-            </ListView>
-        </StackPanel>
+        <!-- PageTrack content -->
+        
         <Frame x:Name="MainContentFrame" Grid.Column="1" Margin="10"/>
     </Grid>
 </Window>
