--- a/FrontendWPF/MainWindow.xaml
+++ b/FrontendWPF/MainWindow.xaml
@@ -107,6 +107,6 @@
 
         <!-- PageTrack content -->
         
-        <Frame x:Name="MainContentFrame" Grid.Column="1" Margin="10"/>
+        <Frame x:Name="MainContentFrame" Grid.Column="1" Margin="10" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
