--- a/FrontendWPF/MainWindow.xaml
+++ b/FrontendWPF/MainWindow.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="EasySave" Height="450" Width="800"
-        FontFamily="Raleway Light">
+        FontFamily="Raleway Light"
+        WindowState="Maximized">
     <Window.Resources>
         <!-- Style pour les boutons animés -->
         <Style x:Key="AnimatedButtonStyle" TargetType="Button">
@@ -91,7 +91,9 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Image Source="easysavelogo.png" Grid.Row="0" Margin="10" Height="90" Stretch="UniformToFill"/>
+            <Viewbox Grid.Row="0" Margin="10">
+                <Image Source="easysavelogo.png" Height="90" Stretch="UniformToFill"/>
+            </Viewbox>
 
             <StackPanel Grid.Column="0" Grid.Row="2" VerticalAlignment="Center">
                 <Button x:Name="NewSaveButton" Content="📁 Nouvelle sauvegarde" Style="{StaticResource AnimatedButtonStyle}" Click="NewSaveButton_Click" />
