--- a/FrontendWPF/PageNew.xaml
+++ b/FrontendWPF/PageNew.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="NewSave">
 
-    <!-- ressources of page  -->
+    <!-- Les ressources de la Page -->
     <Page.Resources>
         <Style x:Key="TextBoxStyle" TargetType="TextBox">
             <Setter Property="Margin" Value="5"/>
