--- a/FrontendWPF/PageTrack.xaml
+++ b/FrontendWPF/PageTrack.xaml
@@ -49,14 +49,17 @@
         <!-- Add the new StackPanel here -->
         <StackPanel Margin="10">
             <TextBlock x:Name="mySaves" Text="MES SAUVEGARDES" FontWeight="Bold" FontSize="30" Margin="0,20,0,100" HorizontalAlignment="Center"/>
+            <TextBlock x:Name="txtNoBackups" 
+                   Text="Vous n'avez aucune sauvegarde" 
+                   FontWeight="Bold" 
+                   FontSize="20" 
+                   HorizontalAlignment="Center" 
+                   Visibility="Collapsed" />
+            <!-- Initially collapsed -->
 
-            <ListView Width="Auto" Margin="0,10">
+            <ListView x:Name="lvBackups" Width="Auto" Margin="0,10">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock x:Name="newSave" Text="nouvelle sauvegarde" FontWeight="Bold" FontSize="15" Margin="10,0" VerticalAlignment="Center"/>
-                    <Button Content="▶ "  Width="33" Height="20" Background="white"/>
-                    <Button Content="⏸" Margin="5" Width="33" Height="20" Background="white"/>
-                    <Button Content="■ " Margin="5" Width="33" Height="20"  Background="White"/>
-                    <Button Content="📃" Margin="5" Width="33" Height="20"  Background="White"/>
+
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <ProgressBar Width="400" Height="15" Margin="0,10" Value="65"/>
@@ -66,7 +69,7 @@
             </ListView>
         </StackPanel>
 
-        
+
     </Grid>
 
 </Page>
