--- a/FrontendWPF/PageTrack.xaml
+++ b/FrontendWPF/PageTrack.xaml
@@ -55,6 +55,7 @@
 
             <ListView x:Name="lvBackups" HorizontalContentAlignment="Stretch" Margin="0,10">
 
+            <ListView x:Name="lvBackups" Width="Auto" Margin="0,10">
                 <StackPanel Orientation="Horizontal">
 
                 </StackPanel>
@@ -63,7 +64,7 @@
                     <TextBlock Text="65%" VerticalAlignment="Center" Margin="5,0"/>
                 </StackPanel>
                 <TextBlock x:Name="estimatedTime" Text="temps estimé" FontWeight="Bold" FontSize="10" Margin="10,0"/>
-
+                
             </ListView>
         </StackPanel>
 
