--- a/FrontendWPF/PageTrack.xaml
+++ b/FrontendWPF/PageTrack.xaml
@@ -57,7 +57,7 @@
                    Visibility="Collapsed" />
             <!-- Initially collapsed -->
 
-            <ListView x:Name="lvBackups" Width="Auto" Margin="0,10">
+            <ListView x:Name="lvBackups" Width="Auto" Margin="0,10" SelectionMode="Extended" Height="Auto" MaxHeight="800" VerticalAlignment="Top">
                 <StackPanel Orientation="Horizontal">
 
                 </StackPanel>
