--- a/FrontendWPF/PageParam.xaml
+++ b/FrontendWPF/PageParam.xaml
@@ -15,6 +15,23 @@
             <Setter Property="FontSize" Value="18"/>
         </Style>
 
+        <!-- Style pour TextBox -->
+        <Style x:Key="TextBoxStyle" TargetType="TextBox">
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Padding" Value="3"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderBrush" Value="#FFABADB3"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Border CornerRadius="5" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ScrollViewer x:Name="PART_ContentHost"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <!-- Style pour RadioButton -->
         <Style x:Key="RadioButtonStyle" TargetType="RadioButton">
             <Setter Property="Margin" Value="10,5"/>
@@ -32,6 +49,21 @@
         <!-- Style pour SmallButton -->
         <Style x:Key="SmallButtonStyle" TargetType="Button">
             <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Margin" Value="3"/>
+            <Setter Property="MinHeight" Value="25"/>
+
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="5" BorderBrush="#FFABADB3"
+                    BorderThickness="1">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                  VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
         <!-- Style pour Button avec un template personnalisé -->
         <Style x:Key="ButtonStyle" TargetType="Button">
@@ -103,19 +135,19 @@
                 </StackPanel>
 
                 <!-- File max parallel size Section -->
-                <TextBlock Name="txtMaxFileSize" Text="Taille maximale des fichiers (kB)" Grid.Column="0" Grid.Row="2" />
-                <StackPanel Grid.Column="0" Grid.Row="3">
-                    <TextBox Name="txtMaxFileSizeInput" />
+                <TextBlock Name="txtMaxFileSize" Text="Taille maximale des fichiers (kB)" Grid.Column="0" Grid.Row="3" />
+                <StackPanel Grid.Column="0" Grid.Row="4">
+                    <TextBox Name="txtMaxFileSizeInput" Style="{StaticResource TextBoxStyle}" />
                 </StackPanel>
 
                 <!-- Business Software Section -->
-                <TextBlock Name="txtBusinessSoftware" Text="Logiciel métier" Grid.Column="1" Grid.Row="2" />
-                <StackPanel Grid.Column="1" Grid.Row="3">
-                    <TextBox Name="txtBusinessSoftwareInput" />
+                <TextBlock Name="txtBusinessSoftware" Text="Logiciel métier" Grid.Column="1" Grid.Row="3" />
+                <StackPanel Grid.Column="1" Grid.Row="4">
+                    <TextBox Name="txtBusinessSoftwareInput" Style="{StaticResource TextBoxStyle}"/>
                 </StackPanel>
 
                 <!-- File extensions to encrypt Section -->
-                <Grid Grid.Column="0" Grid.Row="3" Margin="0,18,0,57" Grid.RowSpan="3">
+                <Grid Grid.Column="0" Grid.Row="5" Margin="0,18,0,24">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -124,7 +156,7 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock Name="txtEncryptFileExtensions" Text="Extensions de fichiers à chiffrer" Grid.Row="0" />
-                    <TextBox Name="txtEncryptFileExtensionInput" Grid.Row="1"/>
+                    <TextBox Name="txtEncryptFileExtensionInput" Grid.Row="1" Style="{StaticResource TextBoxStyle}"/>
 
                     <StackPanel Orientation="Vertical" Grid.Row="2">
                         <Button Name="txtAddEncrypt" Content="Ajouter" Click="btnAddEncryptExtension_Click" Style="{StaticResource SmallButtonStyle}"/>
@@ -133,7 +165,7 @@
                     </StackPanel>
                 </Grid>
                 <!-- File extensions to encrypt Section -->
-                <Grid Grid.Column="1" Grid.Row="5">
+                <Grid Grid.Column="1" Grid.Row="5" Margin="0,18,0,57">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
@@ -142,7 +174,7 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock Name="txtPrioritaryFileExtensions" Text="Extensions de fichiers prioritaires" Grid.Row="0" />
-                    <TextBox Name="txtPrioritaryFileExtensionInput" Grid.Row="1"/>
+                    <TextBox Name="txtPrioritaryFileExtensionInput" Grid.Row="1" Style="{StaticResource TextBoxStyle}"/>
 
                     <StackPanel Orientation="Vertical" Grid.Row="2">
                         <Button Name="txtAddPrioritary" Content="Ajouter" Click="btnAddPrioritaryExtension_Click" Style="{StaticResource SmallButtonStyle}"/>
@@ -152,8 +184,7 @@
                 </Grid>
 
                 <!-- Apply Changes Button -->
-                <Button Name="btnApplyChanges" Content="Appliquer les changements" Style="{StaticResource ButtonStyle}" Grid.Row="5" Grid.ColumnSpan="2" Margin="166,152,162,12" Click="btnApplyChanges_Click"/>
-
+                <Button Name="btnApplyChanges" Content="Appliquer les changements" Style="{StaticResource ButtonStyle}" Grid.Row="5" Grid.ColumnSpan="2" Margin="164,185,164,0" Click="btnApplyChanges_Click"/>
             </Grid>
         </GroupBox>
     </Grid>
