--- a/FrontendWPF/MainWindow.xaml
+++ b/FrontendWPF/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="EasySave" Height="450" Width="800"
+        Title="EasySave 3.0" Height="450" Width="800"
         FontFamily="Raleway Light"
         WindowState="Maximized">
     <Window.Resources>
