--- a/FrontendWPF/PageTrack.xaml
+++ b/FrontendWPF/PageTrack.xaml
@@ -53,7 +53,7 @@
 
 
 
-            <ListView x:Name="lvBackups" HorizontalContentAlignment="Stretch" Margin="0,10" SelectionMode="Extended" Height="Auto" MaxHeight="800" VerticalAlignment="Top">
+            <ListView x:Name="lvBackups" HorizontalContentAlignment="Stretch" Margin="0,10" SelectionMode="Extended" Height="Auto" MaxHeight="800" VerticalAlignment="Top" BorderThickness="2">
 
                 <StackPanel Orientation="Horizontal">
 
