--- a/FrontendWPF/PageTrack.xaml
+++ b/FrontendWPF/PageTrack.xaml
@@ -47,16 +47,27 @@
     <!-- Content of the PageTrack page -->
     <Grid Background="Azure">
         <!-- Add the new StackPanel here -->
-        <StackPanel Margin="10">
+        <StackPanel Margin="10,10,10,10" Cursor="Hand">
+
+
+            <Button x:Name="PerformAllBackupsButton" Content="Button" RenderTransformOrigin="0.471,0.469" Click="PerformAllBackupsButton_Click" Cursor="Hand" VerticalContentAlignment="Center" MinWidth="120" MinHeight="55" MaxWidth="120" MaxHeight="55" FontSize="15" Height="16" Width="49" HorizontalAlignment="Right">
+                <Button.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform AngleX="-1.739"/>
+                        <RotateTransform Angle="-0.824"/>
+                        <TranslateTransform X="1.351"/>
+                    </TransformGroup>
+                </Button.RenderTransform>
+            </Button>
+
+
             <TextBlock x:Name="mySaves" Text="MES SAUVEGARDES" FontWeight="Bold" FontSize="30" Margin="0,20,0,100" HorizontalAlignment="Center"/>
             <TextBlock x:Name="txtNoBackups" Text="Vous n'avez aucune sauvegarde" FontWeight="Bold" FontSize="20" HorizontalAlignment="Center" Visibility="Collapsed" />
 
 
 
-            <ListView x:Name="lvBackups" ItemsSource="{Binding backupGrids}" HorizontalContentAlignment="Stretch" Margin="0,10" SelectionMode="Extended" Height="Auto" MaxHeight="800" VerticalAlignment="Top">
-               
-             
-            </ListView>
+            <ListView x:Name="lvBackups" ItemsSource="{Binding backupGrids}" HorizontalContentAlignment="Stretch" Margin="0,10" SelectionMode="Extended" Height="Auto" MaxHeight="800" VerticalAlignment="Top"/>
         </StackPanel>
 
 
