--- a/FrontendWPF/PageTrack.xaml
+++ b/FrontendWPF/PageTrack.xaml
@@ -42,6 +42,37 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <!-- Style pour Button avec un template personnalisé -->
+        <Style x:Key="ButtonStyle2" TargetType="Button">
+            <Setter Property="Foreground" Value="#FF110D0D"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Padding" Value="1,5"/>
+            <Setter Property="Width" Value="200"/>
+
+            <!-- Adjust properties  -->
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderBrush" Value="#FF4D67AC"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="15" BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}">
+                            <Border.Background>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                    <GradientStop Color="#FF7AC1FF" Offset="0"/>
+                                    <GradientStop Color="LightGreen" Offset="1"/>
+                                </LinearGradientBrush>
+                            </Border.Background>
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Page.Resources>
 
     <!-- Content of the PageTrack page -->
@@ -50,7 +81,7 @@
         <StackPanel Margin="10,10,10,10" Cursor="Hand">
 
 
-            <Button x:Name="PerformAllBackupsButton" Content="Button" RenderTransformOrigin="0.471,0.469" Click="PerformAllBackupsButton_Click" Cursor="Hand" VerticalContentAlignment="Center" MinWidth="120" MinHeight="55" MaxWidth="120" MaxHeight="55" FontSize="15" Height="16" Width="49" HorizontalAlignment="Right">
+            <Button x:Name="PerformAllBackupsButton" Content="Button" RenderTransformOrigin="0.471,0.469"  Style="{StaticResource ButtonStyle2}"  Click="PerformAllBackupsButton_Click" Cursor="Hand" VerticalContentAlignment="Center" MinWidth="250" MinHeight="55"  MaxHeight="55" FontSize="15" Height="16" HorizontalAlignment="Right">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
